samples/_failures_safe/1761271293_ab5f0d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e99f9533.c: In function ‘main’:
./samples/SAFE/__tmp_e99f9533.c:152: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_e99f9533.c:151:9: error: expected declaration or statement at end of input
  151 |         if
      |         ^~
./samples/SAFE/__tmp_e99f9533.c:151:9: error: expected declaration or statement at end of input
